# k_webserver

./: .gitignore  API.md  CMakeLists.txt  README.md  run.sh
core/: CMakeLists.txt  k_err.h  k_http.c  k_http.h  k_json.c  k_json.h  k_srv.c  k_srv.h  main.c
docs/: API.md  k_err.md  k_http.md  k_json.md
routes/: CMakeLists.txt
